video_manager/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manager
  labels:
    app: manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manager
  template:
    metadata:
      labels:
        app: manager
    spec:
      containers:
      - name: video-manager
      #TODO change image tag
        image: felipegiusti/video-manager:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
