video_manager/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manager
spec:
  selector:
    app: manager
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
