video_manager/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manager-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
    - host: video-manager.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: manager
                port:
                  number: 8080
